Update .drone.yml example

--- a/.drone-example.yml
+++ b/.drone-example.yml
@@ -2,8 +2,14 @@ kind: pipeline
 type: docker
 name: hello-world
 
+trigger:
+  branch:
+  - main
+  event:
+  - push
+
 steps:
-  - name: say-hello
-    image: busybox
-    commands:
-      - echo hello-world
+- name: say-hello
+  image: alpine
+  commands:
+  - echo hello world
